--- a/Home-Client/src/app/homepage/homepage.component.html
+++ b/Home-Client/src/app/homepage/homepage.component.html
@@ -4,7 +4,7 @@
     <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
       <h3 class="v">Time For You</h3>
       <h3 class="vr">Since-25/11-1998</h3>
-      <div class="col-md-11 ftco-animate text-center">
+      <div class="col-md-11  text-center">
         <h1>Kids Plaza</h1>
         <h2><span>Play All The Time</span></h2>
       </div>
@@ -20,16 +20,16 @@
 <section class="ftco-section ftco-product">
   <div class="container">
     <div class="row justify-content-center mb-3 pb-3">
-      <div class="col-md-12 heading-section text-center ftco-animate">
+      <div class="col-md-12 heading-section text-center ">
         <h1 class="big">Trending</h1>
         <h2 class="mb-4">Trending</h2>
       </div>
     </div>
     <div class="row">
-      <div class="product-slider  ftco-animate ">
+      <div class="product-slider   ">
         <div class="item col-md-4" *ngFor="let product of listProduct|paginate: { itemsPerPage: 3, currentPage: p }" style="display: inline-block;">
           <div class="product">
-            <a href="#" class="img-prod" ><img class="img-fluid" src="../../../assets/homecss/images/{{product.thumbai}}"
+            <a href="#" class="img-prod" [routerLink]="['/single-product', product.id]" ><img class="img-fluid" src="../../../assets/homecss/images/{{product.thumbai}}"
                 alt="Toys"></a>
                 <!-- <span class="status">30%</span> -->
             <div class="text pt-3 px-3">
@@ -72,7 +72,7 @@
           <span class="icon-play"></span>
         </a>
       </div>
-      <div class="col-md-7 py-5 wrap-about pb-md-5 ftco-animate">
+      <div class="col-md-7 py-5 wrap-about pb-md-5 ">
         <div class="heading-section-bold mb-5 mt-md-5">
           <div class="ml-md-0">
             <h2 class="mb-4">Modist <br>Online <br> <span>Kids Plaza</span></h2>
@@ -87,11 +87,11 @@
     </div>
   </div>
 </section>
-
+<router-outlet></router-outlet>
 <section class="ftco-section bg-light">
   <div class="container">
     <div class="row justify-content-center mb-3 pb-3">
-      <div class="col-md-12 heading-section text-center ftco-animate">
+      <div class="col-md-12 heading-section text-center ">
         <h1 class="big">Products</h1>
         <h2 class="mb-4">Our Products</h2>
       </div>
@@ -102,7 +102,7 @@
       <div class="col-md-3"
         *ngFor="let product of listProduct| paginate: { itemsPerPage: 4, currentPage: p }">
         <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/homecss/images/{{product.thumbai}}"
+          <a href="#" class="img-prod" [routerLink]="['/single-product', product.id]"><img class="img-fluid" src="../../../assets/homecss/images/{{product.thumbai}}"
               alt="Colorlib Template"></a>
           <div>
             <h3><a href="#">
@@ -142,7 +142,7 @@
   style="background-image: url('../../../assets/homecss/images/trecon.jpg');">
   <div class="container">
     <div class="row justify-content-center mb-3 pb-3">
-      <div class="col-md-12 heading-section ftco-animate">
+      <div class="col-md-12 heading-section ">
         <h2>kids Toys</h2>
       </div>
     </div>
@@ -151,13 +151,13 @@
 <section class="ftco-section">
   <div class="container">
     <div class="row justify-content-center mb-3 pb-3">
-      <div class="col-md-12 heading-section text-center ftco-animate">
+      <div class="col-md-12 heading-section text-center ">
         <h1 class="big">Blog</h1>
         <h2>Recent Blog</h2>
       </div>
     </div>
     <div class="row d-flex">
-      <div class="col-md-4 d-flex ftco-animate">
+      <div class="col-md-4 d-flex ">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
             style="background-image: url('../../../assets/homecss/images/image_1.jpg');">
@@ -173,7 +173,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 d-flex ftco-animate">
+      <div class="col-md-4 d-flex ">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
             style="background-image: url('../../../assets/homecss/images/image_2.jpg');">
@@ -189,7 +189,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 d-flex ftco-animate">
+      <div class="col-md-4 d-flex ">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
             style="background-image: url('../../../assets/homecss/images/image_3.jpg');">
@@ -214,7 +214,7 @@
     <div class="row justify-content-center py-5">
       <div class="col-md-10">
         <div class="row">
-          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-3 d-flex justify-content-center counter-wrap ">
             <div class="block-18 text-center">
               <div class="text">
                 <strong class="number" data-number="10000">0</strong>
@@ -222,7 +222,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-3 d-flex justify-content-center counter-wrap ">
             <div class="block-18 text-center">
               <div class="text">
                 <strong class="number" data-number="100">0</strong>
@@ -230,7 +230,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-3 d-flex justify-content-center counter-wrap ">
             <div class="block-18 text-center">
               <div class="text">
                 <strong class="number" data-number="1000">0</strong>
@@ -238,7 +238,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-3 d-flex justify-content-center counter-wrap ">
             <div class="block-18 text-center">
               <div class="text">
                 <strong class="number" data-number="100">0</strong>
@@ -255,7 +255,7 @@
   <div class="parallax-img d-flex align-items-center">
     <div class="container">
       <div class="row d-flex justify-content-center py-5">
-        <div class="col-md-7 text-center heading-section ftco-animate">
+        <div class="col-md-7 text-center heading-section ">
           <h1 class="big">Subscribe</h1>
           <h2>Subcribe to our Newsletter</h2>
           <div class="row d-flex justify-content-center mt-5">
