--- a/Home-Client/src/app/shop/shop.component.html
+++ b/Home-Client/src/app/shop/shop.component.html
@@ -36,7 +36,7 @@
             </div>
             <hr>
             <p class="bottom-area d-flex" >
-              <a href="#" class="add-to-cart"><span>Add to cart <i class="ion-ios-add ml-1"></i></span></a>
+              <a href="#" class="add-to-cart"[routerLink]="['/cart', {id:product.id} ]"><span>Add to cart <i class="ion-ios-add ml-1"></i></span></a>
               <a href="#" class="ml-auto"><span><i class="ion-ios-heart-empty"></i></span></a>
             </p>
           </div>
