--- a/Home-Client/src/app/shopping-cart/shopping-cart.component.html
+++ b/Home-Client/src/app/shopping-cart/shopping-cart.component.html
@@ -2,7 +2,7 @@
 <div class="hero-wrap hero-bread" style="background-image: url('../../../assets/homecss/images/bg_6.jpg');">
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
-      <div class="col-md-9 ftco-animate text-center">
+      <div class="col-md-9 text-center">
         <h1 class="mb-0 bread">My Cart</h1>
         <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Cart</span></p>
       </div>
@@ -13,7 +13,7 @@
 <section class="ftco-section ftco-cart">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 ftco-animate">
+      <div class="col-md-12 ">
         <div class="cart-list">
           <table class="table">
             <thead class="thead-primary">
@@ -27,59 +27,41 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="text-center">
-                <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
+              <tr class="text-center"*ngFor="let item of items">
+                <td class="product-remove"><span class="ion-ios-close" (click)="remove(item.product.id)"></span></td>
                 
-                <td class="image-prod"><div class="img" style="background-image:url(../../../assets/homecss/images/product-3.jpg);"></div></td>
+                <td class="image-prod"><img class="img" src="../../../assets/homecss/images/{{item.product.thumbai}}"
+                  alt="Colorlib Template"></td>
                 
                 <td class="product-name">
-                  <h3>Young Woman Wearing Dress</h3>
+                  <h3>{{item.product.name}}</h3>
                   <p>Far far away, behind the word mountains, far from the countries</p>
                 </td>
                 
-                <td class="price">$4.90</td>
+                <td class="price">{{item.product.price}}</td>
                 
                 <td class="quantity">
                   <div class="input-group mb-3">
-                     <input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
+                     <input type="text" name="quantity" class="quantity form-control input-number" value="{{item.quantity}}" min="1" max="100">
                   </div>
                 </td>
                 
-                <td class="total">$4.90</td>
+                <td class="total">{{item.product.price * item.quantity}}</td>
               </tr><!-- END TR-->
 
-              <tr class="text-center">
-                <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-                
-                <td class="image-prod"><div class="img" style="background-image:url(../../../assets/homecss/images/product-4.jpg);"></div></td>
-                
-                <td class="product-name">
-                  <h3>Young Woman Wearing Dress</h3>
-                  <p>Far far away, behind the word mountains, far from the countries</p>
-                </td>
-                
-                <td class="price">$15.70</td>
-                
-                <td class="quantity">
-                  <div class="input-group mb-3">
-                     <input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
-                  </div>
-                </td>
-                
-                <td class="total">$15.70</td>
-              </tr><!-- END TR-->
+
             </tbody>
           </table>
         </div>
       </div>
     </div>
     <div class="row justify-content-end">
-      <div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
+      <div class="col col-lg-5 col-md-6 mt-5 cart-wrap ">
         <div class="cart-total mb-3">
           <h3>Cart Totals</h3>
           <p class="d-flex">
             <span>Subtotal</span>
-            <span>$20.60</span>
+            <span>{{total}}</span>
           </p>
           <p class="d-flex">
             <span>Delivery</span>
@@ -87,12 +69,12 @@
           </p>
           <p class="d-flex">
             <span>Discount</span>
-            <span>$3.00</span>
+            <span>$0.00</span>
           </p>
           <hr>
           <p class="d-flex total-price">
             <span>Total</span>
-            <span>$17.60</span>
+            <span>{{total}}</span>
           </p>
         </div>
         <p class="text-center"><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
@@ -104,7 +86,7 @@
 <section class="ftco-section bg-light">
   <div class="container">
     <div class="row justify-content-center mb-3 pb-3">
-      <div class="col-md-12 heading-section text-center ftco-animate">
+      <div class="col-md-12 heading-section text-center">
         <h1 class="big">Products</h1>
         <h2 class="mb-4">Related Products</h2>
       </div>
@@ -112,16 +94,19 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm col-md-6 col-lg ftco-animate">
+      <div class="col-md-3"
+        *ngFor="let product of listProduct| paginate: { itemsPerPage: 4, currentPage: p }">
         <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/homecss/images/product-1.jpg" alt="Colorlib Template"></a>
-          <div class="text py-3 px-3">
-            <h3><a href="#">Young Woman Wearing Dress</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
+          <a href="#" class="img-prod" [routerLink]="['/single-product', product.id]"><img class="img-fluid" src="../../../assets/homecss/images/{{product.thumbai}}"
+              alt="Colorlib Template"></a>
+          <div>
+            <h3><a href="#">
+                {{product.name}}</a></h3>
+            <div class="d-flex row">
+              <div class="pricing col-md-6">
+                <p class="price"><span>${{product.price}}.00</span></p>
               </div>
-              <div class="rating">
+              <div class="rating col-md-6" style="text-align: center;">
                 <p class="text-right">
                   <span class="ion-ios-star-outline"></span>
                   <span class="ion-ios-star-outline"></span>
@@ -132,93 +117,18 @@
               </div>
             </div>
             <hr>
-            <p class="bottom-area d-flex">
+            <p class="bottom-area d-flex" >
               <a href="#" class="add-to-cart"><span>Add to cart <i class="ion-ios-add ml-1"></i></span></a>
               <a href="#" class="ml-auto"><span><i class="ion-ios-heart-empty"></i></span></a>
             </p>
           </div>
         </div>
       </div>
-      <div class="col-sm col-md-6 col-lg ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/homecss/images/product-2.jpg" alt="Colorlib Template"></a>
-          <div class="text py-3 px-3">
-            <h3><a href="#">Young Woman Wearing Dress</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-              <div class="rating">
-                <p class="text-right">
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                </p>
-              </div>
-            </div>
-            <hr>
-            <p class="bottom-area d-flex">
-              <a href="#" class="add-to-cart"><span>Add to cart <i class="ion-ios-add ml-1"></i></span></a>
-              <a href="#" class="ml-auto"><span><i class="ion-ios-heart-empty"></i></span></a>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm col-md-6 col-lg ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/homecss/images/product-3.jpg" alt="Colorlib Template"></a>
-          <div class="text py-3 px-3">
-            <h3><a href="#">Young Woman Wearing Dress</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-              <div class="rating">
-                <p class="text-right">
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                </p>
-              </div>
-            </div>
-            <hr>
-            <p class="bottom-area d-flex">
-              <a href="#" class="add-to-cart"><span>Add to cart <i class="ion-ios-add ml-1"></i></span></a>
-              <a href="#" class="ml-auto"><span><i class="ion-ios-heart-empty"></i></span></a>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm col-md-6 col-lg ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/homecss/images/product-4.jpg" alt="Colorlib Template"></a>
-          <div class="text py-3 px-3">
-            <h3><a href="#">Young Woman Wearing Dress</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-              <div class="rating">
-                <p class="text-right">
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                  <span class="ion-ios-star-outline"></span>
-                </p>
-              </div>
-            </div>
-            <hr>
-            <p class="bottom-area d-flex">
-              <a href="#" class="add-to-cart"><span>Add to cart <i class="ion-ios-add ml-1"></i></span></a>
-              <a href="#" class="ml-auto"><span><i class="ion-ios-heart-empty"></i></span></a>
-            </p>
-          </div>
-        </div>
+    </div>
+    <div class="row" style="text-align: center;">
+      <div class="col-md-12">
+        <pagination-controls (pageChange)="p =$event" maxSize="5" directionLinks="true" autoHide="true"
+          responsive="true" previousLabel="Trước" nextLabel="Kế tiếp"></pagination-controls>
       </div>
     </div>
   </div>
@@ -228,7 +138,7 @@
   <div class="parallax-img d-flex align-items-center">
     <div class="container">
       <div class="row d-flex justify-content-center py-5">
-        <div class="col-md-7 text-center heading-section ftco-animate">
+        <div class="col-md-7 text-center heading-section">
           <h1 class="big">Subscribe</h1>
           <h2>Subcribe to our Newsletter</h2>
           <div class="row d-flex justify-content-center mt-5">
